# Warcraft3

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Entity.h  Final  Game.h  Living.cpp  Living.h  Makefile  Player.h  README.md  TODO.txt  Vec2.h  a.out  ai.py  cmake_install.cmake  main  main.cpp  notes.txt  read.txt  setup.py
.cache/clangd/index/: ATen.h.E8614B003C42E073.idx  ATenGeneral.h.05CA8F0CC3069EAA.idx  ATenOpList.h.3DB17687616ED2AE.idx  ATen_fwd.h.68383C1856052B73.idx  AcceleratorHooksInterface.h.544047520FCEA5C9.idx  AlignOf.h.D061C13B7840D270.idx  Allocator.h.633BD769BB8059D5.idx  Archmage.h.E82B78FEE1FF1ABA.idx  ArrayRef.h.12D540DBD279C656.idx  AutogradState.h.6CC684068FA7ADDA.idx  BFloat16-inl.h.906DE3CB104178EF.idx  BFloat16.h.AC3F48B0F182CB87.idx  Backend.h.2581908E1418D65E.idx  Banish.h.3CFF88D18E245652.idx  Barrack.cpp.D1EF636114BECA7D.idx  Barrack.h.0DE21A32D2402A8A.idx  Bitset.h.A04949DF556DE810.idx  Blizzard.h.489FC62FB4EC4C24.idx  BloodMage.h.D3A0163D54919461.idx  BoxedKernel.h.FF11C76A15C28AD3.idx  BoxedKernel_impl.h.053995958D4CFE88.idx  BrillanceAura.h.D475679AEF065B15.idx  C++17.h.D142F4719BBDD33C.idx  COW.h.F698CA1FC4725000.idx  COWDeleter.h.C98DDCE64976373D.idx  CPUGeneratorImpl.h.BEA9EBC80CB4DF47.idx  CUDAHooksInterface.h.D39D3F5D5A1E5593.idx  CallOnce.h.115B9E684211A70F.idx  CheckMemoryFormat.h.BDAAE702AF833FCB.idx  CompileTimeFunctionPointer.h.807374FC334B767F.idx  Config.h.93F614D1B0DC402E.idx  ConstexprCrc.h.758AB39BBD3DCF65.idx  Context.h.71FCB53F9915AED4.idx  CppSignature.h.6A2B7F90CFD775BF.idx  (+4585 more)
Bindings/: Player.cpp  Vec2.cpp  bind.cpp
Map/: Graph.cpp  Graph.h  Map.cpp  Map.h  Terrain.cpp  Terrain.h  WinMapColored.h
Race/Spells/: Banish.h  Blizzard.h  BrillanceAura.h  FlameStrike.h  MassTeleport.h  Polymorph.h  SiphonMana.h  Slow.h  Spell.h  SummonWaterElemental.cpp  SummonWaterElemental.h
Race/Structure/: Barrack.cpp  Barrack.h  Blacksmith.h  Farm.h  Structure.cpp  Structure.h  TownHall.h
Race/Unit/: Footman.h  Peasant.cpp  Peasant.h  Sorceress.h  Unit.cpp  Unit.h  WaterElemental.h
Reinforcement Learning/: IAction.hpp  Policy.cpp  Policy.hpp
ReinforcementLearning/: Action.h  DQN.cpp  DQN.h  Info.txt  RLManager.h  ReplayMemory.cpp  ReplayMemory.h  Reward.cpp  Reward.h  RlManager.cpp  RlManager.h  State.h  Transition.h
State/: Ai.h  Graph.h  Manager.cpp  Manager.h  Map.h  Player.cpp  Player.h  Policy.cpp  Policy.h  Task.cpp  Task.h  WinMapColored.h
Tools/: Vec2.h
libtorch/: build-hash  build-version
libtorch/include/: sleef.h
libtorch/lib/: libc10.dylib  libfbjni.dylib  libpytorch_jni.dylib  libshm.dylib  libtorch.dylib  libtorch_cpu.dylib  libtorch_global_deps.dylib  libtorch_python.dylib
(+56 files in other folders)
